# 2024-LLM-Drone

./: CMakeLists.txt  README.md  config.json  package.xml  requirements.txt
.github/: pull_request_template.md
Week1/: readme.md
Week2/: reademe.md
Week3/: readme.md
config/: show.rviz  waypoints.yaml
launch/: gazebo.launch  run.launch
prompts/: gazebo_basic.txt
px4_offboard_example-main/: CMakeLists.txt  LICENSE  README.md  package.xml
px4_offboard_example-main/launch/: simulation.launch
px4_offboard_example-main/msg/: WayPoint.msg
px4_offboard_example-main/param/: waypoint.yaml
px4_offboard_example-main/scripts/: simulation_main.py
scripts/: chatgpt_gazebo.py  mavros_wrapper.py  visualizer.py  waypoint_follower.py
system_prompts/: gazebo_basic.txt
worlds/: garden.world
