cmake_minimum_required(VERSION 3.0.2)
project(chatgpt_gazebo)

# add_compile_options(-std=c++11)

find_package(catkin REQUIRED COMPONENTS
  geometry_msgs
  nav_msgs
  mavros_msgs
  roscpp
  rospy
)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES chatgpt_gazebo
#  CATKIN_DEPENDS geometry_msgs mavros nav_msgs roscpp rospy
#  DEPENDS system_lib
)

###########
## Build ##
###########

include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)

#############
## Install ##
#############

catkin_install_python(PROGRAMS
  scripts/chatgpt_gazebo.py
  scripts/mavros_wrapper.py
  scripts/waypoint_follower.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)